# swagger-output.json
@@ -374,6 +374,11 @@
         },
         "/api/building/update": {
             "put": {
+                "security": [
+                    {
+                        "Bearer": []
+                    }
+                ],
                 "summary": "Update a building",
                 "parameters": [
                     {
@@ -427,6 +432,31 @@
                                 }
                             }
                         }
+                    }
+                }
+            }
+        },
+        "/api/user/current": {
+            "get": {
+                "tags": [
+                    "users"
+                ],
+                "security": [
+                    {
+                        "Bearer": []
+                    }
+                ],
+                "summary": "Get current user",
+                "description": "Returns the current user based on the authenticated token",
+                "responses": {
+                    "200": {
+                        "description": "OK"
+                    },
+                    "401": {
+                        "description": "Unauthorized"
+                    },
+                    "500": {
+                        "description": "Internal server error"
                     }
                 }
             }
